# codeatlas

./: .gitignore  README.md  TESTING.md  check_pr.sh  pyproject.toml  run_with_review.sh
.github/workflows/: auto-document.yml  codeatlas-review.yml
codeatlas/: __init__.py  main.py
codeatlas/config/: models.yaml
codeatlas/docs/: __init__.py  site.py
codeatlas/ingest/: git_repo.py
codeatlas/llm/: __init__.py  generate_docs.py
codeatlas/publish/: git_ops.py
codeatlas/review/: __init__.py  review_manager.py
docs/: PORTFOLIO.md  USAGE.md  architecture.md  architecture.puml
